# LinuxApplicationDevelopment2021

./: README.md
02_TerminalProject/: Makefile
03_Multifile/: Makefile
03_TerminalProject/: show.c
04_Text/: randomize.sh  randomizer.sh
05_Debugging/: Makefile  gdb_script_1  gdb_script_2  range.c  readme.md  reference_1.txt  reference_2.txt
06_TracingFencing/: Makefile  move.c  sub.c  task.md
06_TracingFencing/_OSX/: Makefile  move.c
07_Environmental/: Makefile.am  configure.ac  readme.md  rhasher.c
08_Regexps/: Makefile.am  configure.ac  esub.c  readme.md
09_Testing/: Makefile.am  README.MD  configure.ac
09_Testing/src/: Makefile.am  buf.h
09_Testing/tests/: Makefile.am  lib_test.ts
10_I18n/: Makefile  README.md  ru.po
10_I18n/_mac_osx_HS/: Makefile  guessInt.c  guessInt.pot
11_Documenting/: Doxyfile.in  Makefile.am  README.md
11_Documenting/__mac_osx/: Makefile.am  README.md  guess.c  ru.po
12_PatchInstall/: Makefile.am  configure.ac  guess.c  guess.md  guess.pot
